Add dep on libfmt

--- a/meson.build
+++ b/meson.build
@@ -2,5 +2,7 @@ project('LexPP', 'cpp',
   version : '0.1',
   default_options : ['warning_level=3'])
 
+fmtdep = dependency('fmt')
+
 exe = executable('lexpp', 'lexpp.cpp',
-  install : true)
+  install : true, dependencies : fmtdep)
