--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('LexPP', 'cpp',
   version : '0.1',
-  default_options : ['warning_level=3', 'cpp_std=c++latest']
+  default_options : ['warning_level=3', 'cpp_std=c++2a']
 )
 cmake = import('cmake')
 
